Task5 some pretty changes